# mcp-openalex

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
app/: context.py  main.py
mcp_openalex/: __init__.py  main.py
mcp_openalex/prompts/: handwerk.py
mcp_openalex/resources/: trades.py
mcp_openalex/tools/: openalex.py
